--- a/css/homepage.css
+++ b/css/homepage.css
@@ -24,13 +24,12 @@ a.no-underline {
 body {
     background-color: black;
     width: 100%;
-    height: 100vh;
     background-image: url("../images/space.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    background-attachment: fixed;
     font-family: "Comic Sans MS", "Anime Ace BB";
-    src: url("../fonts/animeace2_bld.ttf") format("truetype");
     color: whitesmoke;
 }
 
