--- a/css/chapter.css
+++ b/css/chapter.css
@@ -8,11 +8,16 @@ body {
     background-attachment: fixed;
     font-family: "Comic Sans MS", "Anime Ace BB";
     color: whitesmoke;
+    margin: 0;
 }
 
 @font-face {
     font-family: "Anime Ace BB";
     src: url("../fonts/animeace2_bld.ttf") format("truetype");
+}
+
+h1 {
+    text-align: center;
 }
 
 .header {
@@ -51,4 +56,14 @@ a.title {
     100% {
         background-position: 100% 0;
     }
+}
+
+.chapter-images{
+    max-width: 75%;
+    align-content: center;
+}
+
+.chapter-images img{
+    width: 100%;
+    padding-bottom: 15px;
 }
